# torch-memory-visualizer

./: LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-69cXni3X.css  index-B2qm6TKI.js  index-B98ix-P4.js  index-CTtopbSB.js  index-Cje5KlZy.css  index-DIW-8T_H.js  index-DNnnwyeQ.js  index-Dl0XWFiy.css
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: AllocationTimeline.tsx  CodeView.tsx  DropZone.tsx  MemoryTreeView.tsx  Placeholder.tsx  ShapeDisplay.tsx
frontend/src/css/: App.module.css  CodeView.module.css  Header.module.css  MemoryTreeView.module.css  Placeholder.module.css  ShapeDisplay.module.css
frontend/src/types/: base_types.ts
frontend/src/utils/: data_extraction.ts  memory_tree.ts  pyodide.ts  pyodide_ast_source.py  test.py  unpickle.js
python/torch-memviz/: README.md  pyproject.toml
python/torch-memviz/src/torch_memviz/: __init__.py  snapshot.py
python/torch-memviz/tests/: test_local_snapshot.py
python/torch-snapkit/: README.md  pyproject.toml
python/torch-snapkit/src/torch_snapkit/: __init__.py  receiver.py  snapshot.py
python/torch-snapkit/tests/: test_local_snapshot.py  test_shared_snapshot.py
src/: App.tsx  main.tsx
src/components/: CodeView.tsx  Header.tsx  MemoryTreeView.tsx  Placeholder.tsx
src/css/: CodeView.module.css  DropZone.module.css  theme.css
src/pyodide/: unpickle_data.py
src/types/: base_types.ts  memory_tree_types.ts
src/utils/: data_extraction.ts  memory_tree.ts
