[project]
name = "torch-snapkit"
version = "0.1.3"
description = "Generate PyTorch CUDA memory snapshots for torch-memory-visualizer"
readme = "README.md"
authors = [
    { name = "Kilian Mandon", email = "kilian.mandon@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/kilianmandon/torch-memory-visualizer"

[project.scripts]
snapkit-receive = "torch_snapkit.receiver:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
